# Life-Os

./: README.md  backend_files.txt  btca.config.jsonc  eslint.config.js  package-lock.json  package.json  pr_changes.diff  pr_changes_vs_master.diff  src_files.txt  test_files.txt  vite.config.ts  vitest.config.ts
.apm/: metadata.json
.apm/guides/: Context_Synthesis_Guide.md  (+3 more)
scripts/: clean-tauri.sh
src/: routeTree.gen.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  error_test.rs  lib.rs  utils.rs
src-tauri/src/agent/: insights.rs  intelligence.rs  intelligence_test.rs  mod.rs
src-tauri/src/commands/: analytics.rs  assignments.rs  calendar.rs  calendar_events.rs  checkins.rs  course_meetings.rs  courses.rs  courses_bench.rs  debug.rs  exams.rs  exercises.rs  google_calendar.rs  intelligence.rs  mod.rs  practice.rs  sessions.rs  skills.rs  week_plan_blocks.rs  weekly_reviews.rs  weekly_tasks.rs  workout_exercises.rs  workout_templates.rs  workouts.rs
src-tauri/src/db/: connection.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_remove_workout_type_add_custom_exercises.sql  003_agent_learning.sql  004_intelligence_agent.sql  005_comprehensive_revamp.sql  006_workout_templates.sql  007_calendar_planner.sql  008_google_calendar.sql  009_phase3_performance_indexes.sql  mod.rs
src-tauri/src/ml/: bandit.rs  bandit_v2.rs  embedding.rs  feature_store.rs  mod.rs  models.rs  pattern_miner.rs  rich_features.rs  semantic_memory.rs  user_profile.rs
src-tauri/src/models/: assignment.rs  calendar_event.rs  checkin.rs  course.rs  course_meeting.rs  exam.rs  exercise.rs  google_account.rs  google_calendar_pref.rs  google_event_link.rs  google_sync_state.rs  mod.rs  session.rs  skill.rs  user.rs  week_plan_block.rs  weekly_task.rs  workout.rs
src-tauri/src/services/: mod.rs  wger.rs
src/lib/: tauri.ts  (+5 more)
(+85 files in other folders)
