[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
url = "2.5"
keyring = "3.6"
urlencoding = "2.1"

# ML/Agent dependencies
ndarray = { version = "0.17", features = ["serde"] }  # Numerical computing for feature vectors (matches ort 2.0)
rand = "0.8"               # Random number generation
rand_distr = "0.4"         # Beta distribution for Thompson Sampling

# ONNX Runtime for local ML inference
ort = { version = "2.0.0-rc.9" }  # ONNX Runtime (stable RC)

# Tokenizers for embedding model
tokenizers = "0.21"        # Hugging Face tokenizers

# LanceDB for vector storage (semantic memory)
lancedb = "0.15"
arrow = { version = "53", default-features = false }
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"

# Additional ML utilities
nalgebra = "0.33"          # Linear algebra for Bayesian updates

# Async utilities
parking_lot = "0.12"       # Faster locks for caching
once_cell = "1.19"         # Lazy static initialization

# Platform utils
dirs = "5.0"               # Get platform-specific directories
